# autoresearch_codex_spark

./: .gitignore  OPS.md  PROGRESS.md  WIKI.md  pyproject.toml
autoresearch/: DOCUMENTATION.md  __init__.py  cli.DOCUMENTATION.md  cli.py  config.py  reporter.DOCUMENTATION.md  reporter.py  runner.DOCUMENTATION.md  runner.py  types.py
autoresearch/core/: DOCUMENTATION.md  __init__.py  dataset.py  metrics.py  paths.py  splitter.py  state.py  utils.py
autoresearch/scorer/: DOCUMENTATION.md  __init__.py  driver.py  predictor.py
autoresearch/stages/: DOCUMENTATION.md  __init__.py  stage_a.py  stage_b.py  stage_c.py  stage_m.py
data/: ground_truth.jsonl
